disable statement cache

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-POSTGRES_URL="postgres://postgres.recbpkzfdkmsaybmkcii:Y5nuaE9JZnEmDVhB@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
+POSTGRES_URL="postgres://postgres.recbpkzfdkmsaybmkcii:Y5nuaE9JZnEmDVhB@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x&statement_cache_size=0"
 POSTGRES_PRISMA_URL="postgres://postgres.recbpkzfdkmsaybmkcii:Y5nuaE9JZnEmDVhB@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
 SUPABASE_URL="https://recbpkzfdkmsaybmkcii.supabase.co"
 NEXT_PUBLIC_SUPABASE_URL="https://recbpkzfdkmsaybmkcii.supabase.co"
